{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 35,
  "lineage": "097267c4-7954-5276-442e-c2d67ff44d1e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068711448628:internet-gateway/igw-0f070bdab62f92d62",
            "id": "igw-0f070bdab62f92d62",
            "owner_id": "068711448628",
            "region": "us-east-1",
            "tags": {
              "Name": "igw_recharge"
            },
            "tags_all": {
              "Name": "igw_recharge"
            },
            "vpc_id": "vpc-0356dc543ad32a2f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_provision_zones": "enabled",
            "auto_scaling_ips": "enabled",
            "availability_mode": "regional",
            "connectivity_type": "public",
            "id": "nat-1d83cf4ea069b16e7",
            "region": "us-east-1",
            "regional_nat_gateway_address": [
              {
                "allocation_id": "eipalloc-0ea31c2418c58b7b9",
                "association_id": "eipassoc-05ef775cdf695c185",
                "availability_zone": "us-east-1a",
                "availability_zone_id": "use1-az2",
                "public_ip": "34.229.30.4",
                "status": "succeeded"
              }
            ],
            "regional_nat_gateway_auto_mode": "enabled",
            "route_table_id": "rtb-02d5106ed3148e0e9",
            "tags": {
              "Name": "ngw_recharge"
            },
            "tags_all": {
              "Name": "ngw_recharge"
            },
            "vpc_id": "vpc-0356dc543ad32a2f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068711448628:route-table/rtb-02ce82642b7a08348",
            "id": "rtb-02ce82642b7a08348",
            "owner_id": "068711448628",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-1d83cf4ea069b16e7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetable_private_recharge"
            },
            "tags_all": {
              "Name": "routetable_private_recharge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0356dc543ad32a2f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068711448628",
            "id": "rtb-02ce82642b7a08348",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068711448628:route-table/rtb-0fe7f4d55c374019b",
            "id": "rtb-0fe7f4d55c374019b",
            "owner_id": "068711448628",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f070bdab62f92d62",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetable_public_recharge"
            },
            "tags_all": {
              "Name": "routetable_public_recharge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0356dc543ad32a2f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068711448628",
            "id": "rtb-0fe7f4d55c374019b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068711448628:security-group/sg-059c125fcd182548b",
            "description": "EZ FOR ENCE",
            "egress": [],
            "id": "sg-059c125fcd182548b",
            "ingress": [],
            "name": "alb_sg_recharge",
            "name_prefix": "",
            "owner_id": "068711448628",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg_recharge"
            },
            "tags_all": {
              "Name": "alb_sg_recharge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0356dc543ad32a2f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068711448628",
            "id": "sg-059c125fcd182548b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068711448628:security-group/sg-0ba48c589e8120aa0",
            "description": "EZ FOR ENCE",
            "egress": [],
            "id": "sg-0ba48c589e8120aa0",
            "ingress": [],
            "name": "bastion_sg_recharge",
            "name_prefix": "",
            "owner_id": "068711448628",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_sg_recharge"
            },
            "tags_all": {
              "Name": "bastion_sg_recharge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0356dc543ad32a2f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068711448628",
            "id": "sg-0ba48c589e8120aa0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068711448628:security-group/sg-05000710218dbad9d",
            "description": "EZ FOR ENCE",
            "egress": [],
            "id": "sg-05000710218dbad9d",
            "ingress": [],
            "name": "front_sg_recharge",
            "name_prefix": "",
            "owner_id": "068711448628",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "front_sg_recharge"
            },
            "tags_all": {
              "Name": "front_sg_recharge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0356dc543ad32a2f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068711448628",
            "id": "sg-05000710218dbad9d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_from_sg_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3607337517",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-05000710218dbad9d",
            "security_group_rule_id": "sgr-0c26da5598339800c",
            "self": false,
            "source_security_group_id": "sg-059c125fcd182548b",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_alb",
            "aws_security_group.sg_front",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_from_sg_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-144326073",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-05000710218dbad9d",
            "security_group_rule_id": "sgr-03750cbde6fa24443",
            "self": false,
            "source_security_group_id": "sg-0ba48c589e8120aa0",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_bastion",
            "aws_security_group.sg_front",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068711448628:subnet/subnet-0e8918c0d34560d02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8918c0d34560d02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068711448628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet_recharge_private1"
            },
            "tags_all": {
              "Name": "subnet_recharge_private1"
            },
            "vpc_id": "vpc-0356dc543ad32a2f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068711448628",
            "id": "subnet-0e8918c0d34560d02",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068711448628:subnet/subnet-0dfe1d2c9fa2acf46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfe1d2c9fa2acf46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068711448628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet_recharge_private2"
            },
            "tags_all": {
              "Name": "subnet_recharge_private2"
            },
            "vpc_id": "vpc-0356dc543ad32a2f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068711448628",
            "id": "subnet-0dfe1d2c9fa2acf46",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068711448628:subnet/subnet-07d81a86ed3021108",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d81a86ed3021108",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068711448628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet_recharge_public1"
            },
            "tags_all": {
              "Name": "subnet_recharge_public1"
            },
            "vpc_id": "vpc-0356dc543ad32a2f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068711448628",
            "id": "subnet-07d81a86ed3021108",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068711448628:subnet/subnet-002004bb926813db4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002004bb926813db4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068711448628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet_recharge_public2"
            },
            "tags_all": {
              "Name": "subnet_recharge_public2"
            },
            "vpc_id": "vpc-0356dc543ad32a2f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068711448628",
            "id": "subnet-002004bb926813db4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068711448628:vpc/vpc-0356dc543ad32a2f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e2fee5b6e9fcf24d",
            "default_route_table_id": "rtb-0e88f79a91ffae9b3",
            "default_security_group_id": "sg-0a02ed3cd37be8d20",
            "dhcp_options_id": "dopt-0a3e46ced78e8b3e5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0356dc543ad32a2f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e88f79a91ffae9b3",
            "owner_id": "068711448628",
            "region": "us-east-1",
            "tags": {
              "Name": "VPC_recharge"
            },
            "tags_all": {
              "Name": "VPC_recharge"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068711448628",
            "id": "vpc-0356dc543ad32a2f5",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068711448628:security-group-rule/sgr-058d1f510f8990e75",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-058d1f510f8990e75",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-059c125fcd182548b",
            "security_group_rule_id": "sgr-058d1f510f8990e75",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068711448628",
            "id": "sgr-058d1f510f8990e75",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_self_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068711448628:security-group-rule/sgr-0defe93cab869841c",
            "cidr_ipv4": "128.78.144.27/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0defe93cab869841c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ba48c589e8120aa0",
            "security_group_rule_id": "sgr-0defe93cab869841c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068711448628",
            "id": "sgr-0defe93cab869841c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_self_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068711448628:security-group-rule/sgr-0f95e1432af75b044",
            "cidr_ipv4": "128.78.144.27/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0f95e1432af75b044",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05000710218dbad9d",
            "security_group_rule_id": "sgr-0f95e1432af75b044",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068711448628",
            "id": "sgr-0f95e1432af75b044",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_front",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}